--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "add": "^2.0.6",
+    "slugify": "^1.4.7",
     "strapi": "3.4.6",
     "strapi-admin": "3.4.6",
     "strapi-connector-mongoose": "3.4.6",
