--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "strapi-plugin-graphql": "^3.4.6",
     "strapi-plugin-upload": "3.4.6",
     "strapi-plugin-users-permissions": "3.4.6",
+    "strapi-provider-email-sendgrid": "^3.5.3",
     "strapi-provider-upload-cloudinary": "^3.5.0",
     "strapi-utils": "3.4.6"
   },
